Thu Apr 27 10:06:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Document IRIX X ARM cross compile problems.

Wed Apr 26 17:50:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Document BFD automake problem.

2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* TODO, NEWS: Update due to inclusion of gdbmi.texinfo in the GDB
	manual.

2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/README: Explain how to unpack using djunpack.bat.

2000-04-21  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* gdb-stabs.h (SECT_OFF_MAX): Increase to 40.

2000-04-20  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c (thread_rec): Be more defensive about suspending already
	suspended threads.
	(safe_symbol_file_add_stub): New function.
	(safe_symbole_file_add_cleanup): New function.
	(safe_symbol_file_add): New function.
	(handle_load_dll): Use wrapper to add DLL symbol information to avoid
	bogus errors from non-stabs DLLs.
	(handle_exception): Add work around for detection of first exception
	breakpoint which does not seem to occur on W2K.  Detect more "signals"
	that can be effectively passed to the debuggee.  Reorganize to eliminate
	continue_status global.
	(child_continue): Reorganize to eliminate continue_status global.
	(child_wait): Ditto.
	(child_resume): Ditto.
	(get_child_debug_event): Ditto.  Recognize when an a breakpoint
	exception should be ignored.  Change method for signalling when an
	important event has occured to the caller.
	(child_create_inferior): Use new method for noticing when
	get_child_debug_event has found something interesting.

Thu Apr 20 17:39:11 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* defs.h, utils.c (free_current_contents): Change parameter to
 	void*.

	From Philippe De Muyter  <phdm@macqel.be>:
	* printcmd.c (print_address_symbolic): Call `make_cleanup' with
	`(free_current_contents, &x)', not `(free, x)'.
	* utils.c (free_current_contents): Do not `free (NULL)'.
