@@ -1,3 +1,9 @@
+Fri Apr 28 12:21:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>:
+	* target.c (do_monitor_command): Cast tcomplain to correct
+ 	function type in comparison.
+
 Thu Apr 27 10:06:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* TODO: Document IRIX X ARM cross compile problems.
